# FaceGaurd

./: Cargo.toml  README.md  fix2.patch  ui_fixes.patch
core/: Cargo.toml
core/src/: lib.rs
docs/: ARCHITECTURE.md  CHANGELOG.md  FEATURES.md  FEATURE_PROGRESS.md  INDEX.md  ISSUES.md  PLANS.md
ui/: Cargo.toml
ui/public/: mediapipe-helper.js
ui/src/: main.rs  main.rs.bak  main.rs.orig
ui/src-tauri/: Cargo.toml  tauri.conf.json
ui/src-tauri/src/: main.rs
