[package]
name = "ui"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = { version = "0.7", features = ["web", "router"] }
faceguard_core = { path = "../core" }
web-sys = { version = "0.3", features = [
    "Blob",
    "Url",
    "Window",
    "Document",
    "HtmlElement",
    "HtmlVideoElement",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "ImageData",
    "Navigator",
    "MediaDevices",
    "MediaStream",
    "MediaStreamConstraints",
    "VideoFrame",
    "Performance"
] }
js-sys = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
gloo-timers = "0.3"
gloo-storage = "0.3"
